@@ -184,6 +184,11 @@ if ENABLE_SQLITE_DATASTORE
 datastore_SOURCE = datastore_sqlite.c datastore_opthelp_dummies.c \
 		   datastore_dummies.c
 else
+if ENABLE_TOKYOCABINET_DATASTORE
+datastore_SOURCE = datastore_tc.c \
+		   datastore_txn_dummies.c datastore_opthelp_dummies.c \
+		   datastore_dummies.c
+else
 if ENABLE_TRANSACTIONS
 datastore_SOURCE = datastore_db.c datastore_db_trans.c
 else
@@ -192,6 +197,7 @@ datastore_SOURCE = datastore_db.c datastore_db_trad.c \
 		   datastore_opthelp_dummies.c
 else
 datastore_SOURCE = datastore_db.c datastore_db_trad.c datastore_db_trans.c
+endif
 endif
 endif
 endif
