@@ -44,6 +44,7 @@ case $DB_NAME in
 	    *)                               DB_TXN=false ;;
 	esac ;;
     *QDBM*)	     DB_TXN=false ;;
+    *Tokyo*)	     DB_TXN=false ;;
     *SQLite*)	     DB_TXN=true  ;;
     *TrivialDB*)     DB_TXN=false ;;
     *)		    echo >&2 "Unknown data base type in bogofilter -V: $DB_NAME"
