@@ -15,6 +15,11 @@
 
 -------------------------------------------------------------------------------
 
+	2007-11-22
+
+	* Support for tokyocabinet datastore added.
+	  (thanks to Pierre Habouzit)
+
 	2007-08-14
 
 	* doc/README.db was updated to BerkeleyDB 4.6
